<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageView
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:id="@+id/imageView10"
            android:contentDescription="@string/todo"
            android:visibility="visible"
            app:srcCompat="@drawable/neru"
            android:layout_margin="9dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView10"/>

    <TextView
            android:text="@string/ok_welcome"
            android:layout_width="113dp"
            android:layout_height="35dp" android:id="@+id/textView10"
            android:textSize="18sp"
            android:visibility="visible" android:textAlignment="center"
            android:fontFamily="sans-serif-medium"
            android:typeface="sans" android:textColor="#4286f4"
            android:layout_margin="0dp"
            app:layout_constraintTop_toTopOf="@+id/imageView10"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView10" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            android:textStyle="bold"/>

    <TextView
            android:text="@string/list_message"
            android:layout_width="match_parent"
            android:layout_height="43dp" android:id="@+id/textView11"
            android:textColor="@color/colorAccent" android:textSize="20sp" android:textAlignment="center"
            android:padding="6dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <View
            android:id="@+id/divider2"
            android:layout_width="397dp"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="@+id/textView11"/>

    <TextView
            android:text="@string/all_messages"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            android:textColor="#4286f4"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="@+id/divider2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/divider2" android:layout_marginTop="12dp" android:padding="15dp"/>

    <ListView
            android:id="@+id/list_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="MissingConstraints" app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
