<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/emailtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            tools:text="E-mail title" android:textSize="24sp" android:textAlignment="textStart" android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/from"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:id="@+id/textView3" tools:text="From:"
            app:layout_constraintTop_toBottomOf="@+id/divider" app:layout_constraintEnd_toEndOf="@+id/divider"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textAlignment="textStart" android:layout_marginTop="3dp"/>
    <TextView
            android:text="@string/to"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3" android:layout_marginTop="2dp"
            android:layout_marginStart="16dp" tools:text="To:"/>
    <View
            android:id="@+id/divider"
            android:layout_width="395dp"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/textView2" app:layout_constraintEnd_toEndOf="@+id/textView2"
            android:paddingBottom="16dp"/>
    <WebView
            android:id="@+id/Email_view_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView5">
    </WebView>
</android.support.constraint.ConstraintLayout>